tests/toylang/neg/001175_mutation.toylang
program a = { 0 a then sleep; } .
